k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-app
  namespace: application
  labels:
    app: task-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: task-app
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
      containers:
        - name: task-app
          image: REMPLACER_PAR_TON_ECR_URI:latest
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          ports:
            - containerPort: 5000
          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "50m"
              memory: "96Mi"
            limits:
              cpu: "250m"
              memory: "200Mi"
