k8s/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-db
  namespace: application
  labels:
    app: task-db
spec:
  clusterIP: None
  selector:
    app: task-db
  ports:
    - port: 5432
      targetPort: 5432
      protocol: TCP
